# login

./: .gitignore  README.md
client/: .env  .env.example  README.md  package.json  pnpm-lock.yaml  wxt.config.ts
docs/: README.md  a2a-auth-copy-paste.md  sse-auth-copy-paste.md  (+2 more)
server/: .env  .env.example  README.md  pyproject.toml
server/app/: auth.py  config.py  dependencies.py  keycloak.py  main.py  schemas.py  storage.py
server/app/api/: router.py
server/app/auth/: __init__.py  dependencies.py  factory.py
server/app/auth/domain/: __init__.py  access_policy.py  exceptions.py  principal.py  token_verifier.py
server/app/auth/infrastructure/: __init__.py  keycloak_token_verifier.py
server/app/auth/presentation/: __init__.py  dependencies.py  http_errors.py
server/app/auth/services/: __init__.py  auth_service.py
server/app/browser_control/: __init__.py
server/app/browser_control/presentation/: __init__.py  router.py  schemas.py
server/app/browser_control/services/: __init__.py  browser_control_event_service.py
server/app/chat/: __init__.py
server/app/chat/infrastructure/: __init__.py  a2a_app_factory.py  langchain_chat_handler.py
server/app/core/: __init__.py  dependencies.py  settings.py
server/app/projects/: __init__.py
server/app/projects/domain/: __init__.py  models.py  repositories.py
server/app/projects/infrastructure/: __init__.py  in_memory_project_repository.py
server/app/projects/presentation/: __init__.py  router.py  schemas.py
server/app/projects/services/: __init__.py  project_service.py
server/app/routers/: projects.py
(+83 files in other folders)
